--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,10 +2,19 @@
 <html lang="fr">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/logo2.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="/src/style.css" rel="stylesheet">
-    <title>portfolio</title>
+    <title>Filipe Motta — Développeur Web</title>
+    <meta property="og:title" content="Filipe Motta — Développeur Web" />
+    <meta property="og:description" content="Bienvenue sur mon portfolio en ligne ! Je suis Filipe Motta, un développeur web passionné spécialisé dans la création de sites web modernes
+    et réactifs. Découvrez mes projets, compétences et expériences dans le domaine du développement web." />
+    <meta property="og:type" content="website" />
+    <meta property="og:image" content="/logo2.svg" />
+    <meta property="og:url" content="https://filipe-motta.com/" />
+    <meta property="og:locale" content="fr_FR" />
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://filipe-motta.com/"/>
   </head>
   <body>
     <main id="root"></main>  
